update to use utils

--- a/system-info/index.html
+++ b/system-info/index.html
@@ -21,6 +21,7 @@
 <body>
   <div id="system-info"></div>
   
+  <script src="utils.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
