updates styles for processor display

--- a/system-info/index.html
+++ b/system-info/index.html
@@ -15,10 +15,20 @@
           overflow-x: scroll;
           overflow-y: scroll;
       }
+      table { 
+          width: 80%
+      }
+      table, th, td {
+          border: 1px solid black;
+      }
+      td {
+          padding: 0 0.4em;
+          text-align: right;   
+      }
   </style>
 </head>
 
-<body>
+<body>  
   <div id="system-info"></div>
   
   <script src="utils.js"></script>
