--- a/url-block/options.html
+++ b/url-block/options.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <!--<button id="enableDisable">Disable</button>-->
+    <button id="enableDisable">Disable</button>
 
     <form>
         <br>
