show more info of what is blocked

--- a/url-block/options.html
+++ b/url-block/options.html
@@ -32,6 +32,7 @@
 
         <br>
         <br>
+        Allowed Hosts
         <table id="display-results">
             <thead>
             <tr>
@@ -41,8 +42,20 @@
             </thead>
             <tbody></tbody>
         </table>
-
     </form>
+
+    <br>
+    <br>
+    Blocked Hosts
+    <table id="blocked-results">
+        <thead>
+        <tr>
+            <th>Host or Domain</th>
+            <th>Number of Blocked Requests</th>
+        </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
     <script src="options.js"></script>
 
