switch from allow to block

--- a/url-block/options.html
+++ b/url-block/options.html
@@ -25,14 +25,14 @@
 
     <form>
         <br>
-        <label>Allow URL</label>
+        <label>Block URL</label>
         <input type="text" size="50" name="allow-url" id="allow-url-id">
         <br>
         <button id="add-button">Add</button>
 
         <br>
         <br>
-        Allowed Hosts
+        Blocked Hosts
         <table id="display-results">
             <thead>
             <tr>
@@ -46,12 +46,12 @@
 
     <br>
     <br>
-    Blocked Hosts
+    Allowed Hosts
     <table id="blocked-results">
         <thead>
         <tr>
             <th>Host or Domain</th>
-            <th>Number of Blocked Requests</th>
+            <th>Number of Requests</th>
         </tr>
         </thead>
         <tbody></tbody>
