--- a/url-block/options.html
+++ b/url-block/options.html
@@ -57,6 +57,7 @@
         <tbody></tbody>
     </table>
 
+    <script src="urlUtils.js"></script>
     <script src="options.js"></script>
 
 </body>
