update options page

--- a/url-block/options.html
+++ b/url-block/options.html
@@ -32,8 +32,8 @@
 
         <br>
         <br>
-        Blocked Hosts
-        <table id="display-results">
+        Enabled Hosts
+        <table id="enabled-results">
             <thead>
             <tr>
                 <th>Host or Domain</th>
@@ -46,8 +46,21 @@
 
     <br>
     <br>
+    Blocked Hosts
+        <table id="blocked-results">
+            <thead>
+            <tr>
+                <th>Host or Domain</th>
+                <th>Number of Requests</th>
+                <th>Allow</th>
+            </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    <br>
+    <br>
     Allowed Hosts
-    <table id="blocked-results">
+    <table id="allowed-results">
         <thead>
         <tr>
             <th>Host or Domain</th>
