either allowed or blocked list of hosts

--- a/url-block/options.html
+++ b/url-block/options.html
@@ -29,19 +29,6 @@
         <input type="text" size="50" name="allow-url" id="allow-url-id">
         <br>
         <button id="add-button">Add</button>
-
-        <br>
-        <br>
-        Enabled Hosts
-        <table id="enabled-results">
-            <thead>
-            <tr>
-                <th>Host or Domain</th>
-                <th>Delete</th>
-            </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
     </form>
 
     <br>
@@ -65,6 +52,7 @@
         <tr>
             <th>Host or Domain</th>
             <th>Number of Requests</th>
+            <th>Block</th>
         </tr>
         </thead>
         <tbody></tbody>
