--- a/url-block/options.html
+++ b/url-block/options.html
@@ -59,6 +59,7 @@
     </table>
 
     <script src="urlUtils.js"></script>
+    <script src="enable.js"></script>
     <script src="options.js"></script>
 
 </body>
